src/sass/main.scss
/* ... */
// EXPERIENCE on the PC


.experience {

  padding-bottom: 1em;

  &__large-view {
    height: 100vh;
  }

  &__container__grid {
    display: grid;
    height: 70vh;
    grid-template-columns: 1fr 3fr;
    grid-template-rows: repeat(7, 1fr);
    gap: 10px 10px;
  }

  &__year {

    background-color: $main-color;
    // border: 4px solid $dark-blue;
    @include experience;
    font-size: 29px;
    cursor: pointer;
    border-radius: 8px;
    color: $shadow-blue;
    transition: scale .5s, background-color .5s, color .3s;

    &:hover {
      scale: (.95);
    }


    // to jest do ostylowania po kliknięciu
    &-check {
      background-color: $dark-blue;
      color: $light-gray;
    }

    &--one {
      grid-column: 1 / 2;
      grid-row: 1 / 2;
      
    }
    &--two {
      grid-column: 1 / 2;
      grid-row: 2 / 3;
    }
    &--three {
      grid-column: 1 / 2;
      grid-row: 3 / 4;
    }
    &--four {
      grid-column: 1 / 2;
      grid-row: 4 / 5;
    }
    &--five {
      grid-column: 1 / 2;
      grid-row: 5 / 6;
    }
    &--six {
      grid-column: 1 / 2;
      grid-row: 6 / 7;
    }
    &--seven {
      grid-column: 1 / 2;
      grid-row: 7 / 8;
    }
  }


  &__label__box {
    // grid-column: 2 /3;
    // grid-row: 1 / 4;
    background-color: yellow;
    @include experience;
    justify-content: space-evenly;
  }



  &__label--co {
    position: relative;
    background-color: $dark-blue;
    color: $orange;
    // border: 8px solid $orange;
    flex-grow: 2;
    width: 100%;
    @include experience;
    font-size: 5rem;
    font-weight: bold;
    border-radius: 8px;
    grid-column: 2 / 3;
    grid-row: 1 / 3;

    p {
      margin: 0;
      padding: 0;
      animation: liItem .2s linear forwards;
    }

  }
  &__label--occupation {
    // background-color: $orange;
    border: 4px solid $dark-blue;
    
    width: 100%;
    @include experience;
    font-size: 2.5rem;
    border-radius: 8px;
    grid-column: 2 / 3;
    grid-row: 3 / 4;
    color: $dark-blue;
    // border: 4px solid $dark-blue;
    
    p {
      margin: 0;
      padding: 0;
      animation: liItem .2s linear forwards;
    }
  }

  &__detail {
    grid-column: 2 / 3;
    grid-row: 4 / 8;
    background-color: $orange;
    @include experience;
    border: 4px solid $dark-blue;
    border-radius: 8px;
    
    ul {
      display: block;
      width: 70%;
    }

    ul > li {
      padding: 3px 0;
      font-size: 18px;
      color: $dark-blue;
      opacity: 1;
      animation: liItem .2s linear forwards;
    }

    

    @keyframes liItem {
      0% {
        opacity: 0;
      }
      50% {
        opacity: .5;
      }
      100% {
        opacity: 1;
      }
    }
  }
}

.animation {
  animation: liItem .9s linear forwards;

  @keyframes liItem {
    0% {
      opacity: 0;
    }
    50% {
      opacity: .5;
    }
    100% {
      opacity: 1;
    }
  }
}


// SKILL


.skills {


  &__wrapper {
    padding-bottom: 3rem;
  }

  &__container {
    // border: 1px solid wheat;
    margin: 3em 0;
    transition: scale .5s;

    &:hover {
      scale: (1.2);
    }
    

    &:hover .skills__shadow {
      opacity: 1;
    }
    
    &:hover .skills__card-tittle {
      background-color: #fff;
      // color: $main-color;
    }

    &:hover .skills__card-text {
      color: white;
    }
    

  }

  &__heading-main {
    color: $light-gray;
  }

  &__card-tittle {
    color: $light-gray;
    text-transform: uppercase;
    padding: 1.5rem;
    // border: 1px dashed $light-gray;
    background-color: $light-gray;
    color: #333;
    border-radius: 8px;
    width: fit-content;
    margin: 0 auto;
    margin-bottom: 2em;
    height: 30px;
    @include experience;
    opacity: .7;
    font-size: 1.5rem;
  }

  &__img {
    opacity: .7;
    position: relative;
    height: 112px;
    width: 112px;
    margin: 0 auto;
  }

  &__shadow {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 112px;
    height: 112px;
    // transform: translateX(50%);
    // transform: translateY(-50%);
    // width: 90px;



    opacity: 0;
    transition: opacity .2s;

  }

  &__card-text {
    padding-top: 4rem;
    color: $light-gray;
    font-size: 1.7rem;
    padding-left: 6rem;
    padding-right: 6rem;
    // border: 1px solid wheat;
    width: 90%;
    margin: 0 auto;
    height: 120px;
  }

  
}

// COURSES

.courses {

  .carousel-item {
    height: 680px;
  }
  
  h4 {
    font-size: 1rem;
    opacity: .5;
    padding-left: 1rem;
  }

  h3 {
    font-size: 1.2rem;
    color: $main-color;
    padding-left: 1.2rem;
  }

  &__slide {
    border-radius: 8px;
    overflow: hidden;
  }
}

// COURSES on PC

.skills {

  &__lg-container {
    margin-bottom: 3em;
  }
}
.carousel-caption {
  right: 0;
  left: 0;
  padding: 10px 0;
  height: 40%;
  background-color: rgba(0, 0, 0, .8);
}

.h5 {

  &_title {
    font-size: 2.8rem;
    padding-top: 1rem;
    padding-bottom: 1rem;
  }

  &_school {
    font-size: 1.5rem;
    padding-bottom: 0.5rem;
  }

  &_year {
    font-size: 1.3rem;
    padding-bottom: 20px;
  }
}
.p_description {
  padding: 2rem 5rem;
  text-align: center;
  font-size: 1.5rem;


  &-one {
    font-size: 2rem;
  }

  &-two {
    font-size: 1.7rem;
  }

  &-three {
    
  }
}

.h5_title,
.h5_school,
.h5_year,
.p_description {
  color: $light-gray;
}
/* ... */

